--- a/deployEnvironment.yml
+++ b/deployEnvironment.yml
@@ -11,3 +11,6 @@
     - name: pull docker image
       shell: docker pull sbrc1996/speminiproject
 
+    - name: running container
+      shell: docker create -it sbrc1996/speminiproject
+
